SynProdGITV1/force-app/main/default/objects/Service_Team__c/Service_Team__c.object-meta.xml
<CustomObject>
    <description>Object defining the service team of plants</description>
    <label>Service Team</label>
    <nameField>
        <label>Service Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>