SynProdGITV1/force-app/main/default/objects/Service_Team__c/fields/Investigation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Cost__c</fullName>
    <description>The total expense incurred during the initial assessment or diagnostic phase of the service, including labor, travel, and materials used for investigation.</description>
    <label>Investigation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>