SynProdGITV1/force-app/main/default/objects/Service_Team__c/fields/Service_Plant__c.field-meta.xml
<CustomField>
    <fullName>Service_Plant__c</fullName>
    <description>Text field for storing the plant relationship with service team</description>
    <label>Service Plant</label>
    <length>10</length>
    <type>Text</type>
</CustomField>