SynProdGITV1/force-app/main/default/objects/Service_Team__c/fields/Service_Team_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Team_External_Id__c</fullName>
    <description>Service team external id used for data migration</description>
    <externalId>true</externalId>
    <label>Service Team External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>