SynProdGITV1/force-app/main/default/objects/Service_Team__c/fields/ServiceTeamMemIDs1__c.field-meta.xml
<CustomField>
    <fullName>ServiceTeamMemIDs1__c</fullName>
    <description>ServiceTeamMemIDs separated by semi colon</description>
    <label>ServiceTeamMemIDs1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>