SynProdGITV1/force-app/main/default/objects/Service_Team__c/fields/ServiceTeamMemIDs2__c.field-meta.xml
<CustomField>
    <fullName>ServiceTeamMemIDs2__c</fullName>
    <label>ServiceTeamMemIDs2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>