SynProdGITV1/force-app/main/default/objects/Service_Team__c/fields/Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Type__c</fullName>
    <description>Indicates the classification of the site where the service is being performed, such as commercial, residential, industrial, or remote.</description>
    <label>Site Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Syn Site</fullName>
            </value>
            <value>
                <fullName>Toll Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>