SynProdGITV1/force-app/main/default/objects/Service_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Team</label>
</ListView>